# Chatting-with-Dataframes

./: 3.19.5  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  test.py  utils.py
chatdf/: CONTRIBUTING.md  README.md  __init__.py  pip.txt  pyproject.toml
chatdf/docs/: Makefile  example.ipynb
chatdf/src/chatdf/: chatbot.py  example.py  main.py  requirements.txt
chatdf/src/chatdf/pages/: ⚙️_openai_setting.py  📖_selecting_dataset.py
chatdf/src/utils/: utils.py
chatdf/tests/: test_chatdf.py
docs/: conf.py  make.bat
