[tool.poetry]
name = "chatdf"
version = "0.2.1"
description = "A Package to Chat with Polars/DuckDB Dataframes"
authors = ["Dheeraj Oruganty, Pranav Patil, Yifan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
